Update and rename zktm86BIS.html to zktm87BIS.html

--- a/example/zktm87BIS.html
+++ b/example/zktm87BIS.html
@@ -43,7 +43,25 @@
 <!--  inserimento scripts per sweetmodal pop up --> 
 <link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
 <script src="js/jquery.sweet-modal6.js"></script>
-<!--  fine scripts per sweetmodal pop up -->	  
+<!--  fine scripts per sweetmodal pop up -->	 
+	  
+	  
+<!--   delimito overlay -->
+<style>
+div#overlay {
+   position:fixed;
+   top:0;
+   left:0;
+   height:100%;
+   width:100%;
+   z-index:100;
+   background-color:#444444;
+   opacity:0.5;
+   filter:alpha(opacity=50);
+}
+</style>
+<!--  fine  delimitazione overlay -->	  
+	  
 	  
 	  
   </head>
