--- a/example/zktm88BIS.html
+++ b/example/zktm88BIS.html
@@ -44,31 +44,12 @@
 <link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
 <script src="js/jquery.sweet-modal6.js"></script>
 <!--  fine scripts per sweetmodal pop up -->	 
-	  
-	  
-<!--   delimito overlay -->
-<style>
-div#overlay {
-   position:fixed;
-   top:0;
-   left:0;
-   height:100%;
-   width:100%;
-   z-index:100;
-   background-color:#444444;
-   opacity:0.5;
-   filter:alpha(opacity=50);
-}
-</style>
-<!--  fine  delimitazione overlay -->	  
-	  
-	  
-	  
+ 	  
   </head>
 
 
 <!-- start the body of your page -->
-<body>
+<body bgcolor="#f0f0f0">
 	
 
 <!--  sweetmodal pop up rotazione schermo device-->	
