--- a/example/zktm89BIS.html
+++ b/example/zktm89BIS.html
@@ -49,7 +49,7 @@
 
 
 <!-- start the body of your page -->
-<body bgcolor="#f0f0f0">
+<body style="background-color:#f0f0f0">
 	
 
 <!--  sweetmodal pop up rotazione schermo device-->	
