--- a/example/zktm90BIS.html
+++ b/example/zktm90BIS.html
@@ -49,7 +49,7 @@
 
 
 <!-- start the body of your page -->
-<body style="background-color:#ffffff">
+<body style="background-color:#ffffcc">
 	
 
 <!--  sweetmodal pop up rotazione schermo device-->	
