Update and rename zktm92BIS.html to zktm93BIS.html

--- a/example/zktm93BIS.html
+++ b/example/zktm93BIS.html
@@ -1,6 +1,6 @@
   <html><head>
 	  
-    
+    <meta name="viewport" content="width=device-width">
 	  
     <title>Blueprint Esempio</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -33,8 +33,9 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
+<!--	 
 <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>	  
-<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>   
+<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>   -->
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
