--- a/example/mobileitO.html
+++ b/example/mobileitO.html
@@ -78,8 +78,8 @@ $.sweetModal({
            
 
             <div id="main-controls">
-              <a href="storiablueblue" class="btn btn-default btn-sm" id="new">
-              <span class="glyphicon glyphicon-refresh" title="Nuovo Progetto"></span>       <!-- Nuovo  -->
+              <a href="mobileitI.html" class="btn btn-default btn-sm" id="new">
+              <span class="glyphicon glyphicon-refresh" title="Nuovo Oggetto"></span>       <!-- Nuovo  -->
               </a>
               
 	      <a href="" class="btn btn-default btn-sm" id="buyidlink">
