Update and rename mobileitO-1.html to mobileitO-2.html

--- a/example/mobileitO-2.html
+++ b/example/mobileitO-2.html
@@ -93,7 +93,16 @@ $.sweetModal({
 	      <script>
 	      $( "#info-sign" ).click(function() {
  	     
-		      
+	          	$.sweetModal({
+	      		title: 'VERSIONE PC / DESKTOP',
+              		content: '<center><img src="orientationdevice.png"><br>Puoi utilizzare questa app anche sul tuo <u><b>PC</b></u><br> sfruttando <u><b>GRATIS</b></u> la <u><b>REALT&Agrave; VIRTUALE</b></u> !<br>Dal tuo computer connettiti al sito: <b><i>www.b...</i></b>.<br>Buona progettazione!</center>',
+	      		buttons: [
+			{
+			label: 'OK',
+			classes: 'redB'
+		        }
+	    		]
+            		});
 		      /* **** */
 	      });
 	     </script>    
