--- a/example/mobileitO.html
+++ b/example/mobileitO.html
@@ -212,7 +212,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <a-scene>
+  <a-scene vr-mode-ui="enabled: false">
     <!-- this is the "stage" of your 3D content -->
 
     <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
