--- a/example/mobileitO13.html
+++ b/example/mobileitO13.html
@@ -212,12 +212,12 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
- <!--  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   -->
-      <a-scene arjs="debugUIEnabled: false;">
+  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
+
     <!-- this is the "stage" of your 3D content -->
 
  <!--   <a-entity camera="" position="0 1.6 5"></a-entity>  -->   <!-- We move the camera around a bit -->
-	      <a-entity camera="" position="0 1.6 5"></a-entity>
+	      <a-entity camera="" position="-1 1.6 5"></a-entity>
     <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
