Update and rename mobileitO21.html to mobileitO22.html

--- a/example/mobileitO22.html
+++ b/example/mobileitO22.html
@@ -72,7 +72,7 @@ $.sweetModal({
 
 
         <!-- Right Column -->
-        <div class="col-xs-9 main">    <div id="imagesave">
+        <div class="col-xs-9 main">    <!--  <div id="imagesave"> -->
 
         <!-- 3D Viewer prima era qui-->
            
@@ -167,7 +167,7 @@ $.sweetModal({
 
 	</div>
 
-</div>    </div>  
+<!-- </div> -->    </div>  
   
 <script>   
 //////////   funzione per raccogliere variabili js    
