Update and rename mobileitO24.html to mobileitO25.html

--- a/example/mobileitO25.html
+++ b/example/mobileitO25.html
@@ -68,7 +68,7 @@ $.sweetModal({
 	
 	
 	
-	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>  
+<!--	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>   -->
 
 
         <!-- Right Column -->
@@ -165,7 +165,7 @@ $.sweetModal({
 
 
 
-	</div>
+<!--	</div>  -->
 
 <!-- </div> -->  <!--  </div>  -->
   
