--- a/example/mobileitO28.html
+++ b/example/mobileitO28.html
@@ -24,7 +24,7 @@
 <script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
-<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>
+<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversionTENT.js"></script>
 <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar-gioversion4.js"></script>
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
@@ -212,7 +212,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <a-scene embedded vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
+  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
 
     <!-- this is the "stage" of your 3D content -->
 
