Update and rename mobileitO32.html to mobileitO33.html

--- a/example/mobileitO33.html
+++ b/example/mobileitO33.html
@@ -35,18 +35,7 @@
 <script src="js/jquery.sweet-modal6.js"></script>
 <!--  fine scripts per sweetmodal pop up -->
 	  
-<style>
-#myEmbeddedScene {
-  height: auto;
-  width: auto;
-}
-a-scene {
-  height: auto;
-  width: auto;
-}
-</style>
-	  
-  
+
   </head>
 
 
@@ -223,8 +212,8 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <div id="myEmbeddedScene">	
-  <a-scene embedded vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
+	
+  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
 
     <!-- this is the "stage" of your 3D content -->
 
@@ -256,7 +245,7 @@ totvalues.setAttribute("position",positionarray);
 	  
     
     </a-scene> 
-    </div>
+
   
   
 </body></html>
