--- a/example/mobileitO34.html
+++ b/example/mobileitO34.html
@@ -213,7 +213,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
+  <a-scene embedded vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">   
 
     <!-- this is the "stage" of your 3D content -->
 
