--- a/example/mobileitO37.html
+++ b/example/mobileitO37.html
@@ -213,7 +213,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <a-scene embedded vr-mode-ui="enabled: false" arjs>   
+  <a-scene embedded vr-mode-ui="enabled: false">   
 
     <!-- this is the "stage" of your 3D content -->
 
