--- a/example/mobileitO38.html
+++ b/example/mobileitO38.html
@@ -35,7 +35,14 @@
 <script src="js/jquery.sweet-modal6.js"></script>
 <!--  fine scripts per sweetmodal pop up -->
 	  
-
+<style>
+.aframebox {
+height: 200px;
+width: 200px;
+}	
+</style>
+	  
+	  
   </head>
 
 
@@ -213,7 +220,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 	
-  <a-scene embedded vr-mode-ui="enabled: false">   
+  <a-scene class="aframebox" embedded vr-mode-ui="enabled: false">   
 
     <!-- this is the "stage" of your 3D content -->
 
