Update and rename mobileitO40.html to mobileitO41.html

--- a/example/mobileitO41.html
+++ b/example/mobileitO41.html
@@ -35,12 +35,6 @@
 <script src="js/jquery.sweet-modal6.js"></script>
 <!--  fine scripts per sweetmodal pop up -->
 	  
-<style>
-.aframebox {
-height: 200px;
-width: 200px;
-}	
-</style>
 	  
 	  
   </head>
@@ -172,7 +166,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 
-  <a-scene class="aframebox" embedded vr-mode-ui="enabled: false">   
+  <a-scene vr-mode-ui="enabled: false">   
 
     <!-- this is the "stage" of your 3D content -->
 
