--- a/example/mobileitO43.html
+++ b/example/mobileitO43.html
@@ -70,7 +70,7 @@ $.sweetModal({
 	
 	
 	
-	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>  
+	<div style='position: fixed; width:100%; height:100%; top: 0px; z-index: 1;'>  
 
 
         <!-- Right Column -->
