--- a/example/mobileitO44.html
+++ b/example/mobileitO44.html
@@ -166,7 +166,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 
-  <a-scene vr-mode-ui="enabled: false">   
+  <a-scene vr-mode-ui="enabled: false" style="height: 100vh;">   
 
     <!-- this is the "stage" of your 3D content -->
 
