Update and rename mobileitO44.html to mobileitO45.html

--- a/example/mobileitO45.html
+++ b/example/mobileitO45.html
@@ -70,7 +70,7 @@ $.sweetModal({
 	
 	
 	
-	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>  
+	<div style='position: fixed; width:100%; top: 0px; z-index: -1;'>  
 
 
         <!-- Right Column -->
@@ -166,7 +166,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 	
 
-  <a-scene vr-mode-ui="enabled: false" style="height: 100vh;">   
+  <a-scene vr-mode-ui="enabled: false">   
 
     <!-- this is the "stage" of your 3D content -->
 
