--- a/example/mobileitO47.html
+++ b/example/mobileitO47.html
@@ -168,8 +168,9 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
   <style>
   #myEmbeddedScene {
 	  
-    width: 100vh;
-    height: 100vh;	  
+    width: 100%;
+    height: 100%;
+    position: fixed;  
 	  
     }
   </style>
