--- a/example/mobileitO48.html
+++ b/example/mobileitO48.html
@@ -168,8 +168,8 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
   <style>
   #myEmbeddedScene {
 	  
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;  
 	  
     }
