--- a/example/mobileitO50.html
+++ b/example/mobileitO50.html
@@ -87,11 +87,11 @@ $.sweetModal({
  <!--             </a>
               
 	      <a href="" class="btn btn-default btn-sm" id="buyidlink">
-              <span class="glyphicon glyphicon-shopping-cart" title="Compra Ora"></span>       <!-- Buy  -->
+              <span class="glyphicon glyphicon-shopping-cart" title="Compra Ora"></span>        Buy  -->
  <!--              </a>	    
 	 
 		    
-	      <a href="#" class="btn btn-default btn-sm" id="info-sign">		<!-- Infos   -->
+	      <a href="#" class="btn btn-default btn-sm" id="info-sign">		 Infos   -->
 <!--	      <span class="glyphicon glyphicon-info-sign"></span>
 	      </a>            -->
 	      <script>
