--- a/example/mobileitO51.html
+++ b/example/mobileitO51.html
@@ -72,7 +72,7 @@ $.sweetModal({
 	
 	
 	
-	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>   
+<!--	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>     -->
 
 
         <!-- Right Column -->
