--- a/example/ZO3.html
+++ b/example/ZO3.html
@@ -116,7 +116,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 
 
-  <a-scene embedded vr-mode-ui="enabled: false">   
+  <a-scene embedded vr-mode-ui="enabled: false" artoolkit='sourceType: webcam;' antialias="true" outline>   
 
     <!-- this is the "stage" of your 3D content -->
 
