Update and rename ZO5.html to ZO6.html

--- a/example/ZO6.html
+++ b/example/ZO6.html
@@ -113,12 +113,14 @@ var scalearray =""+Sx+" "+Sy+" "+Sz+"";
 var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 </script>
-	
+
+<style>	
 a-scene {
   position: fixed;
   height: 100vh;
   width: 100vw;
 }
+</style>
 <div id="myEmbeddedScene">
   <a-scene embedded vr-mode-ui="enabled: false" antialias="true">   
 
