Update and rename ZO6.html to ZO7.html

--- a/example/ZO7.html
+++ b/example/ZO7.html
@@ -115,7 +115,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 </script>
 
 <style>	
-a-scene {
+#myEmbeddedScene {
   position: fixed;
   height: 100vh;
   width: 100vw;
