--- a/example/ZO9.html
+++ b/example/ZO9.html
@@ -39,8 +39,9 @@
 <style>	
 #myEmbeddedScene {
   position: fixed;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  top: 0px;
 }
 </style>	  
 	  
