Update and rename ZO9.html to ZO10.html

--- a/example/ZO10.html
+++ b/example/ZO10.html
@@ -123,7 +123,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 
 
 <div id="myEmbeddedScene">
-  <a-scene embedded vr-mode-ui="enabled: false" antialias="true">   
+  <a-scene vr-mode-ui="enabled: false" antialias="true">   
 
     <!-- this is the "stage" of your 3D content -->
 
