--- a/example/ZO11.html
+++ b/example/ZO11.html
@@ -50,6 +50,9 @@
 
 <!-- start the body of your page -->
 <body>
+	
+	
+	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>AAAAAA</div>
 
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
