--- a/example/mobileitO55.html
+++ b/example/mobileitO55.html
@@ -71,7 +71,7 @@ $.sweetModal({
 <!--  fine sweetmodal pop up rotazione schermo device-->
 	
 	
-	<div style='position: fixed; width:100%; top: 0px; z-index: -1;'>    
+	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>    
 
 
         <!-- Right Column -->
@@ -167,7 +167,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 
 
-  <a-scene vr-mode-ui="enabled: false">   
+  <a-scene vr-mode-ui="enabled: false" antialias="true">   
 
     <!-- this is the "stage" of your 3D content -->
 
