Update and rename mobileitO55.html to mobileitO56.html

--- a/example/mobileitO56.html
+++ b/example/mobileitO56.html
@@ -167,7 +167,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
 
 
-  <a-scene vr-mode-ui="enabled: false" antialias="true">   
+  <a-scene vr-mode-ui="enabled: false" antialias="true" isMobile="true">   
 
     <!-- this is the "stage" of your 3D content -->
 
