--- a/example/ZO15.html
+++ b/example/ZO15.html
@@ -166,7 +166,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 </script>
 
 
-  <a-scene vr-mode-ui="enabled: false" antialias="true">   
+  <a-scene vr-mode-ui="enabled: false" antialias="true" style='position: fixed;'>   
 
     <!-- this is the "stage" of your 3D content -->
 
