--- a/example/ZO16.html
+++ b/example/ZO16.html
@@ -25,7 +25,7 @@
 <script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
-<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>
+<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframetentativo.js"></script>
 <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar-gioversion4.js"></script>
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
@@ -166,7 +166,7 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 </script>
 
 
-  <a-scene vr-mode-ui="enabled: false" antialias="true" style='position: fixed;'>   
+  <a-scene vr-mode-ui="enabled: false" antialias="true">   
 
     <!-- this is the "stage" of your 3D content -->
 
