Update and rename ZO25.html to ZO26.html

--- a/example/ZO26.html
+++ b/example/ZO26.html
@@ -26,7 +26,7 @@
 <script src="js/html2canvas.js"></script>
 
 <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframetentativo3-3.js"></script>
-<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar-gioversion4.js"></script>
+<!-- <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar-gioversion4.js"></script> -->
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
