--- a/example/zmad4.html
+++ b/example/zmad4.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 <head>
- 
-	
-  <meta name="viewport" content="width=device-width">	
+  <meta name="viewport" content="width=device-width">
   <title>So I heard millenials love Avocados...</title>
   <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>
   <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar-gioversion.js"></script>
@@ -11,7 +9,7 @@
 </head>
 <body>
   
-  <a-scene style='position: fixed; width:100%; top: 0px; z-index: 1;'>
+  <a-scene style='position: fixed; width:100%; top: 0px; z-index: 1;' vr-mode-ui="enabled: false"> 
     <!-- this is the "stage" of your 3D content -->
 
     <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
