--- a/example/zmad10.html
+++ b/example/zmad10.html
@@ -13,8 +13,11 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
+	
 
- 
+ <!-- include a polyfill for chrome android -->
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> 
+	
 
 <script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.12.4/jquery-1.12.4.js"></script>
