--- a/example/zmad11.html
+++ b/example/zmad11.html
@@ -16,7 +16,7 @@
 	
 
  <!-- include a polyfill for chrome android -->
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> 
+<script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
 	
 
 <script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.11.3/jquery.min.js"></script>
