--- a/example/zmad15.html
+++ b/example/zmad15.html
@@ -98,6 +98,23 @@ document.getElementById("buyidlink").href=buy;
 var scalearray =""+Sx+" "+Sy+" "+Sz+""; 
 var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
+	
+////////////////
+
+var ele=document.getElementById("avocado");
+ele.setAttribute('src',linkfin);
+	
+//////////
+	
+////////////
+	
+var totvalues= document.getElementById("defavocado");
+totvalues.setAttribute("scale",scalearray);  
+// var positionarray = ""+Px+" "+Py+" "+Pz+"";
+totvalues.setAttribute("position",positionarray);
+	
+/////////////////
+	
 </script>
 	
 	
@@ -117,22 +134,22 @@ var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	    <a-asset-item id="avocado" src=""></a-asset-item>
     </a-assets>
 	  
-	  <script>
+	<!--  <script>
 	   var ele=document.getElementById("avocado");
 	   ele.setAttribute('src',linkfin);		  	  
-	  </script>
+	  </script>   -->
 
  <!-- <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity> -->
 
  <a-entity gltf-model="#avocado" id="defavocado" look-controls="reverseMouseDrag:true" scale="" position="0 0 0"></a-entity>
 	  
-<script>
+<!--  <script>
 // var scalearray =""+Sx+" "+Sy+" "+Sz+"";  
 var totvalues= document.getElementById("defavocado");
 totvalues.setAttribute("scale",scalearray);  
 // var positionarray = ""+Px+" "+Py+" "+Pz+"";
 totvalues.setAttribute("position",positionarray);	  
-</script>	
+</script>	-->
 	  
 	  
 	  
