--- a/example/zmad22.html
+++ b/example/zmad22.html
@@ -52,9 +52,9 @@ var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
 var buy = getParameterByName('buyurl'); 
-var Sx = getParameterByName('Sx');   
-var Sy = getParameterByName('Sy');
-var Sz = getParameterByName('Sz');
+var Sx = parseFloat(getParameterByName('Sx'));   
+var Sy = parseFloat(getParameterByName('Sy'));
+var Sz = parseFloat(getParameterByName('Sz'));
 var Px = getParameterByName('Px');
 var Py = getParameterByName('Py');    
 	
