--- a/example/zmad23.html
+++ b/example/zmad23.html
@@ -164,7 +164,7 @@ document.querySelector('a-scene').appendChild(entgltf);
 entgltf.setAttribute('gltf-model','#avocado');
 entgltf.setAttribute('id','defavocado');
 entgltf.setAttribute('look-controls','reverseMouseDrag:true');
-entgltf.setAttribute('scale',scalearray);	 
+entgltf.setAttribute('scale',{Sx, Sy, Sz});	 
 entgltf.setAttribute("position",positionarray);	 
 	 
 	 
