--- a/example/zmad24.html
+++ b/example/zmad24.html
@@ -52,9 +52,9 @@ var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
 var buy = getParameterByName('buyurl'); 
-var Sx = parseFloat(getParameterByName('Sx'));   
-var Sy = parseFloat(getParameterByName('Sy'));
-var Sz = parseFloat(getParameterByName('Sz'));
+var Sx = getParameterByName('Sx');   
+var Sy = getParameterByName('Sy');
+var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
 var Py = getParameterByName('Py');    
 	
@@ -164,7 +164,12 @@ document.querySelector('a-scene').appendChild(entgltf);
 entgltf.setAttribute('gltf-model','#avocado');
 entgltf.setAttribute('id','defavocado');
 entgltf.setAttribute('look-controls','reverseMouseDrag:true');
-entgltf.setAttribute('scale',{Sx, Sy, Sz});	 
+entgltf.setAttribute('scale',scalearray);
+	 
+entgltf.addEventListener('loaded', function() {
+  console.log(entgltf.getAttribute('scale'));
+});	 
+	 
 entgltf.setAttribute("position",positionarray);	 
 	 
 	 
