Update and rename zmad24.html to zmad25.html

--- a/example/zmad25.html
+++ b/example/zmad25.html
@@ -172,7 +172,9 @@ entgltf.addEventListener('loaded', function() {
 	 
 entgltf.setAttribute("position",positionarray);	 
 	 
-	 
+entgltf.addEventListener('loaded', function() {
+  console.log(entgltf.getAttribute('position'));
+});	 
 	 
 	 
 </script>
