Update and rename zmad26.html to zmad27.html

--- a/example/zmad27.html
+++ b/example/zmad27.html
@@ -154,6 +154,8 @@ totvalues.setAttribute("scale",scalearray);
 totvalues.setAttribute("position",positionarray);
 */
 /////////////////  
+	 
+	 alert(scalearray);
 
 var box = document.createElement('a-asset-item');
 $('a-assets').append(box);
