--- a/example/zmad29.html
+++ b/example/zmad29.html
@@ -70,27 +70,6 @@ document.getElementById("buyidlink").href=buy;
 var scalearray =""+Sx+" "+Sy+" "+Sz+""; 
 var positionarray = ""+Px+" "+Py+" "+Pz+"";
 	
-	
-/////////////////
-	
-var box = document.createElement('a-asset-item');
-$('a-assets').append(box);
-box.setAttribute('id', 'avocado');
-box.setAttribute('src', linkfin);
-var entgltf = document.createElement('a-entity');
-//document.querySelector('a-scene').appendChild(entgltf);
-entgltf.setAttribute('gltf-model','#avocado');
-entgltf.setAttribute('id','defavocado');
-entgltf.setAttribute('look-controls','reverseMouseDrag:true');
-
-entgltf.setAttribute('scale',scalearray);
-	 
-entgltf.setAttribute("position",positionarray);	 
-	 
-document.querySelector('a-scene').appendChild(entgltf);	
-	
-/////////////////
-
 
 </script>
 	
@@ -158,7 +137,7 @@ $.sweetModal({
 	  
   </a-scene>
 	
- <!-- 
+
  <script>
  //////////////// 
 /*
@@ -194,7 +173,7 @@ entgltf.setAttribute("position",positionarray);
 	 
 document.querySelector('a-scene').appendChild(entgltf);	 
 	 
-</script> -->
+</script> 
     
     
 </body>
