Update and rename zmad30.html to zmad31.html

--- a/example/zmad31.html
+++ b/example/zmad31.html
@@ -164,6 +164,8 @@ totvalues.setAttribute("position",positionarray);
 	 
 var scalearray = document.getElementById("Scaleval").value;
 var positionarray = document.getElementById("Posval").value;
+	 
+	 alert(scalearray);
 
 var box = document.createElement('a-asset-item');
 $('a-assets').append(box);
