Update and rename zuzu.html to zuzu1.html

--- a/example/zuzu1.html
+++ b/example/zuzu1.html
@@ -155,6 +155,8 @@ totvalues.setAttribute("position",positionarray);
 */
 /////////////////  
 	 
+alert(linkfin); alert(Sx);
+
 
 var box = document.createElement('a-asset-item');
 $('a-assets').append(box);
