--- a/example/zuzu2.html
+++ b/example/zuzu2.html
@@ -155,7 +155,7 @@ totvalues.setAttribute("position",positionarray);
 */
 /////////////////  
 	 
-alert(linkfin); alert(Sx);
+alert(linkfin); alert(Sx); alert(scalearray);
 
 
 var box = document.createElement('a-asset-item');
@@ -174,7 +174,6 @@ entgltf.setAttribute("position", this.positionarray);
 	 
 document.querySelector('a-scene').appendChild(entgltf);	 
 	 
-	 alert(this.scalearray);
 	 
 </script> 
     
