Update and rename zuzu4-1.html to zuzu4-2.html

--- a/example/zuzu4-2.html
+++ b/example/zuzu4-2.html
@@ -100,10 +100,10 @@ $.sweetModal({
 <!--  fine sweetmodal pop up rotazione schermo device-->	
 	
 	
-<!-- -------------------------------------------------------- -->	
+<!-- -------------------------------------------------------- 	
 
-<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>    
-
+<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>    -->
+<div style='position: fixed; width:100%; top: 0px;'>
 
         <!-- Right Column -->
         <!-- <div class="col-xs-9 main">  -->  <!--  <div id="imagesave"> -->
