--- a/example/mobileitO.html
+++ b/example/mobileitO.html
@@ -126,7 +126,7 @@ $.sweetModal({
  	     
 	          	$.sweetModal({
 	      		title: 'VERSIONE PC / DESKTOP',
-              		content: '<center><img src="orientationdevice.png"><br>Puoi utilizzare questa app anche sul tuo <u><b>PC</b></u><br> sfruttando <u><b>GRATIS</b></u> la <u><b>REALT&Agrave; VIRTUALE</b></u> !<br>Dal tuo computer connettiti al sito: <b><i>www.b...</i></b>.<br>Buona progettazione!</center>',
+              		content: '<center><img src="devices.png"><br>Puoi utilizzare questa app anche sul tuo <u><b>PC</b></u><br> sfruttando <u><b>GRATIS</b></u> la <u><b>REALT&Agrave; VIRTUALE</b></u> !<br>Dal tuo computer connettiti al sito: <b><i>www.b...</i></b>.<br>Buona progettazione!</center>',
 	      		buttons: [
 			{
 			label: 'OK',
