--- a/example/indexVAR2.html
+++ b/example/indexVAR2.html
@@ -24,7 +24,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/exampleVAR1.js"></script>
+    <script src="js/exampleVAR2.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -55,7 +55,7 @@
               Complementi di Progetto
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-            <li id="items_tab"><a href="#">
+            <li id="items_tab"><a href="#" id="axtab">
               Aggiungi Sedute
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
