Update and rename indexVAR3.html to indexVAR4.html

--- a/example/indexVAR4.html
+++ b/example/indexVAR4.html
@@ -24,7 +24,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/exampleVAR3.js"></script>
+    <script src="js/exampleVAR4.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -59,7 +59,7 @@
               Aggiungi Sedute
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-            <li id="items_tab_1"><a href="#">
+            <li id="items_tab_1"><a href="#" id="axtab_1">
               Aggiungi Tavoli/Scrivanie
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
