Update and rename indexVAR4.html to indexVAR5.html

--- a/example/indexVAR5.html
+++ b/example/indexVAR5.html
@@ -63,19 +63,19 @@
               Aggiungi Tavoli/Scrivanie
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-            <li id="items_tab_2"><a href="#">
+            <li id="items_tab_2"><a href="#" id="axtab_2">
               Aggiungi Armadi/Cassettiere
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-           <li id="items_tab_3"><a href="#">
+           <li id="items_tab_3"><a href="#" id="axtab_3">
               Aggiungi Carrelli
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>	
-	   <li id="items_tab_4"><a href="#">
+	   <li id="items_tab_4"><a href="#" id="axtab_4">
               Aggiungi Racks
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-	   <li id="items_tab_5"><a href="#">
+	   <li id="items_tab_5"><a href="#" id="axtab_5">
               Aggiungi Scaffalature
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
