--- a/example/indexVAR8.html
+++ b/example/indexVAR8.html
@@ -24,7 +24,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/exampleVAR7.js"></script>
+    <script src="js/exampleVAR8.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -77,6 +77,10 @@
               </a></li>
 	   <li id="items_tab_5"><a href="#" id="axtab_5">
               Aggiungi Scaffalature
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>
+	   <li id="items_tab_var" hidden><a href="#" id="axtab_var">
+              Vedi Varianti
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
           </ul>
