Update and rename indexVAR8.html to indexVAR9.html

--- a/example/indexVAR9.html
+++ b/example/indexVAR9.html
@@ -24,7 +24,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/exampleVAR8.js"></script>
+    <script src="js/exampleVAR9.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -79,7 +79,7 @@
               Aggiungi Scaffalature
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-	   <li id="items_tab_var" hidden><a href="#" id="axtab_var">
+	   <li id="items_tab_var" style="display:none;"><a href="#" id="axtab_var" style="display:none;">
               Vedi Varianti
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
