--- a/example/indexVAR9.html
+++ b/example/indexVAR9.html
@@ -172,6 +172,8 @@
 	      <br /><br />
 	      <span id="modelDatartot" hidden></span>
 	      
+	      <script src="js/varitems-it/" type="text/javascript"></script>	    
+		    
    
    
 <script>
