--- a/example/indexVAR9.html
+++ b/example/indexVAR9.html
@@ -1122,6 +1122,16 @@
           </div>
 		
 		
+	<!-- Add Items_Var commento-->
+          <div id="add-items_var">   
+            <div class="row" id="items-wrapper_var">  
+
+              <!-- Items added here by items_var.js commento -->
+            </div>   <br><br>
+          </div>	
+		
+		
+		
         </div> 
         <!-- End Right Column -->
       </div>
