--- a/example/indexVAR13.html
+++ b/example/indexVAR13.html
@@ -179,7 +179,7 @@
 	      function loadjsvar (varfilename){
 	      // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
-	        filename = "js/varitems-it/items_varcod-"+varfilename+".js";
+	        var filename = "js/varitems-it/items_varcod-"+varfilename+".js";
 		var fileref=document.createElement('script');
 		fileref.setAttribute("type","text/javascript");
 		fileref.setAttribute("src", filename);
