--- a/example/indexVAR13.html
+++ b/example/indexVAR13.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/example.css" rel="stylesheet">
+    <link href="css/exampleVAR.css" rel="stylesheet">
    
 
     <!-- Make sure you've built blueprint3d.js -->
