Update and rename indexVAR14.html to indexVAR15.html

--- a/example/indexVAR15.html
+++ b/example/indexVAR15.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/exampleVAR.css" rel="stylesheet">
+    <link href="css/exampleVARbis.css" rel="stylesheet">
    
 
     <!-- Make sure you've built blueprint3d.js -->
@@ -24,7 +24,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/exampleVAR14.js"></script>
+    <script src="js/exampleVAR15.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
