--- a/example/indexVAR18.html
+++ b/example/indexVAR18.html
@@ -181,7 +181,10 @@
 
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
-var filename = "js/varitems-it/items_varcod-"+varfilename+".js";
+// var filename = "js/varitems-it/items_varcod-"+varfilename+".js";
+			
+var filename = "js/items_varcod-"+varfilename+".js";
+			
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
 document.head.appendChild(myScript);
