--- a/example/indexVAR22.html
+++ b/example/indexVAR22.html
@@ -24,9 +24,9 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
 	  
-	  <script src="js/items_varcod-203.js"></script>
+	  <script src="js/varitems-it/items_varcod-203.js"></script>
     
-    <script src="js/varitems-it/exampleVAR21.js"></script>
+    <script src="js/exampleVAR22.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
