--- a/example/indexVAR25.html
+++ b/example/indexVAR25.html
@@ -24,9 +24,12 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
 	  
-	  <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script>
+	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
+	  
+	  <script src="" id="oveu"></script>
+
     
-    <script src="js/exampleVAR24.js"></script>
+    <script src="js/exampleVAR25.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
