--- a/example/indexVAR26.html
+++ b/example/indexVAR26.html
@@ -25,11 +25,8 @@
     <script src="js/items_5.js"></script>
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
-	  
-	  <script src="" id="oveu"></script>
 
-    
-    <script src="js/exampleVAR25.js"></script>
+    <script src="js/exampleVAR26.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -186,17 +183,17 @@
 
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";           /*
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
-document.head.appendChild(myScript);                          */
+document.head.appendChild(myScript);                        
 
 
 alert(filename);    
 			
 			
-document.getElementById("oveu").setAttribute('src', filename);			
+//document.getElementById("oveu").setAttribute('src', filename);			
 
 }
 
