--- a/example/indexVAR29.html
+++ b/example/indexVAR29.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR28.js"></script>
+    <script src="js/exampleVAR29.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -192,6 +192,16 @@ myScript.setAttribute('src', filename);
 
 document.body.appendChild(myScript); 			
 			
+			
+////////			
+var myScripta = document.createElement('script');
+myScripta.setAttribute('src', 'js/blueprint3d.js');
+document.body.appendChild(myScripta);
+			
+////////////
+			
+			
+			
 script.onload = function(){
     alert("Script is ready!");
 };			
@@ -207,7 +217,7 @@ loadjsvar("204");
 
 	    <!--  <script src="js/varitems-it/" type="text/javascript"></script>   -->	    
 		    
-   
+<script src="js/blueprint3d.js"></script>   
    
 <script>
   $( function() {
