--- a/example/indexVAR33.html
+++ b/example/indexVAR33.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR32.js"></script>
+    <script src="js/exampleVAR33.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -180,8 +180,12 @@
 		function loadjsvar (varfilename){
 	
 var myScript0 = document.createElement('script');
-myScript0.setAttribute('src', 'js/bootstrap.js');	
+myScript0.setAttribute('src', 'js/blueprint3d.js');	
 document.head.appendChild(myScript0); 
+			
+myScript0.onload = function(){
+    alert("Script bueprint3d is ready!");
+};			
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
@@ -192,8 +196,12 @@ myScript.setAttribute('src', filename);
                       
 //alert(filename);    
 
-document.head.appendChild(myScript); 			
+document.head.appendChild(myScript); 	
 			
+			
+myScript.onload = function(){
+    alert(filename);
+};			
 
 }
 
