--- a/example/indexVAR34.html
+++ b/example/indexVAR34.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR33.js"></script>
+    <script src="js/exampleVAR34.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -181,7 +181,7 @@
 	
 var myScript0 = document.createElement('script');
 myScript0.setAttribute('src', 'js/blueprint3d.js');	
-document.head.appendChild(myScript0); 
+document.body.appendChild(myScript0); 
 			
 myScript0.onload = function(){
     alert("Script bueprint3d is ready!");
@@ -196,7 +196,7 @@ myScript.setAttribute('src', filename);
                       
 //alert(filename);    
 
-document.head.appendChild(myScript); 	
+document.body.appendChild(myScript); 	
 			
 			
 myScript.onload = function(){
